tests/negative/test_ret_eval_no_drop.orb
data Foo {
    x:i32
} (eval (fnc dropFoo (val:Foo::noDrop) () {}));

eval (fnc bar (f:Foo::noDrop) Foo {
    ret f;
});

fnc main () () {
    eval (sym f:Foo);
    eval (bar f);
};